# llm_ocr_doc_intel

./: .gitignore  Dockerfile  README.md  conductor_config.properties  docker-compose.yml  ocr_processing_workflow.json  pyproject.toml  requirements.txt  test_llm_extraction_from_md.py
PSEG/: output.json  output.md
app/: __init__.py  conductor_utils.py  conductor_workers.py  config.py  config_models.py  db_utils.py  docling_processor.py  graph_orchestrator.py  llama_parser_processor.py  llm_extractor.py  llm_response_models.py  llm_text_enhancer.py  llm_utils.py  main.py  models.py  ocr_utils.py  worker.py
